[package]
name = "backfill_scripe"
version = "0.1.0"
edition = "2021"

[features]
release = ["router/release"]

[dependencies]
async-bb8-diesel = { git = "https://github.com/jarnura/async-bb8-diesel", rev = "53b4ab901aab7635c8215fd1c2d542c8db443094" }
router = { git = "https://github.com/juspay/hyperswitch", rev = "dccb8d4e629d615a69f6922a96e72f10d3410bfc" }
diesel_models = { git = "https://github.com/juspay/hyperswitch", rev = "dccb8d4e629d615a69f6922a96e72f10d3410bfc" }
storage_impl = { git = "https://github.com/juspay/hyperswitch", rev = "dccb8d4e629d615a69f6922a96e72f10d3410bfc" }
router_env = { git = "https://github.com/juspay/hyperswitch", rev = "dccb8d4e629d615a69f6922a96e72f10d3410bfc" }
hyperswitch_interfaces = { git = "https://github.com/juspay/hyperswitch", rev = "dccb8d4e629d615a69f6922a96e72f10d3410bfc" }
common_utils = { git = "https://github.com/juspay/hyperswitch", rev = "dccb8d4e629d615a69f6922a96e72f10d3410bfc" }
hyperswitch_domain_models = { git = "https://github.com/juspay/hyperswitch", rev = "dccb8d4e629d615a69f6922a96e72f10d3410bfc" }
diesel = { version = "2.2.3", features = ["postgres"] }
error-stack = "0.4.1"
tokio = "1.40.0"
clap = { version = "4.5.17", features = ["derive"] }
indicatif = "0.17.8"
serde_json = "1.0.128"
futures = "0.3.30"
